feat: Add numerous new web tools, games, apps, templates, guides, and legacy pages, along with a new favicon and an update to index.html.

--- a/templates/generateReportCSV.html
+++ b/templates/generateReportCSV.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../assets/css/global.css">
     <title>JSON to CSV Converter with Download</title>
+    <link rel="icon" type="image/svg+xml" href="../assets/images/favicon.svg">
     <style>
         textarea { width: 300px; height: 200px; }
         div { margin-top: 10px; }
